--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,3 @@
-
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .App {
   display:flex;
   flex-direction: column;
@@ -17,7 +9,10 @@
   justify-content:center;
   align-items:center;
 }
-
+.App h1{
+  font-size: 32px;
+  text-align: center;
+}
 .decks {
   display: grid;
   width: 600px;
@@ -26,6 +21,7 @@
   color: #000000;
   grid-template-columns: repeat(3, 1fr);
 }
+
 .decks li button{
   position: absolute;
   font-size: 10px;
@@ -45,4 +41,36 @@
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+
+.cards {
+  display: grid;
+  width: 600px;
+  margin: 0 auto;
+  grid-gap: 10px;
+  color: #000000;
+  grid-template-columns: repeat(3, 1fr);
+}
+.cards li button{
+  
+  position: absolute;
+  font-size: 10px;
+  top: 5px;
+  right: 5px;
+}
+.cards li{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  background:white;
+  border: 1px solid white;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  padding: 30px;
+  /* padding-top: 30px; */
 }
