--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,7 +18,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #000000;
   text-decoration: inherit;
 }
 a:hover {
@@ -27,7 +27,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -73,6 +72,17 @@ button:focus-visible {
  .input-wrapper input:focus {
   outline-color: lightcoral;
  }
+
+ .page{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+ }
+ .container{
+  width:  800px;
+  height: 100%;
+  margin: 0 auto;  
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
